--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ nav a:hover {
 button {
     background-color: #0065FC;
     color: white;
-    height: 53px;
+    height: 52px;
     border: none;
     border-radius: 0px 18px 18px 0px;
     padding: 15px;
